added server params

--- a/wgs.conf
+++ b/wgs.conf
@@ -12,5 +12,6 @@ params {
 	serverName = 'DEMO'
 	humanMapCfg = '/store/params/human.map.conf'
 	humanVariantCfg = '/store/params/human.variant.conf'
+	reference = '/store/nf/reference/human_g1k_v37_decoy.grf'
 }
 
