--- a/configuration/interactive-milou.config
+++ b/configuration/interactive-milou.config
@@ -16,16 +16,16 @@ process {
   memory = '8.GB'
   time = '1.h'
   queue = 'node'        // node queue will use the whole node - 16CPUs and 128mem on milou - changing it to 'core' at certain processes
-  clusterOptions = {
-    "-A $params.project"
-  }
+//  clusterOptions = {
+//    "-A $params.project"
+//  }
 
   errorStrategy = task.exitStatus == 143 ? 'retry' : 'terminate'
   maxRetries = 3
   maxErrors = '-1'
 
   // Environment modules for each process
-  $MapReads.module = ['bioinfo-tools', 'bwa/0.7.13', 'samtools/1.3']
+  $MapReads.module = ['bioinfo-tools', 'bwa', 'samtools']
   $MergeBams.module = ['bioinfo-tools', 'samtools/1.3']
   $MarkDuplicates.module = ['bioinfo-tools', 'picard/1.118']
   $CreateIntervals.module = ['java/sun_jdk1.8.0_40']
